5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1800_2564.log
== TEST (2019-06-06 10:52:22) 
-- CODE:
from numpy import *

cont = zeros(3, dtype = int)

t = array(eval(input("gols efetuados: "))).split(",")
ta = array(eval(input("gols sofridos: "))).split(",")

for i in range(size(t)==size(ta)):
	if([i]t > [i]ta):
		cont[0] = cont[0] + 1
	elif([i]t == [i]ta):
		cont[1] = cont[1] + 1
	elif([i]t < [i]ta):
		cont[2] = cont[2] + 1
print(cont)

-- ERROR:
File "XXXX", line 9
    if([i]t > [i]ta):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:52:51) 
-- CODE:
from numpy import *

cont = zeros(3, dtype = int)

t = array(eval(input("gols efetuados: "))).split(",")
ta = array(eval(input("gols sofridos: "))).split(",")

for i in range(size(t)==size(ta)):
	if([i] > [i]):
		cont[0] = cont[0] + 1
	elif([i] == [i]):
		cont[1] = cont[1] + 1
	elif([i] < [i]):
		cont[2] = cont[2] + 1
print(cont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:53:31) 
-- CODE:
from numpy import *

cont = zeros(3, dtype = int)

t = array(eval(input("gols efetuados: ")))
ta = array(eval(input("gols sofridos: ")))

for i in range(size(t)==size(ta)):
	if([i] > [i]):
		cont[0] = cont[0] + 1
	elif([i] == [i]):
		cont[1] = cont[1] + 1
	elif([i] < [i]):
		cont[2] = cont[2] + 1
print(cont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:54:41) 
-- CODE:
from numpy import *

cont = zeros(3, dtype = int)

t = array(eval(input("gols efetuados: ")))
ta = array(eval(input("gols sofridos: ")))

for i in range(size(t)==size(ta)):
	if(t > ta):
		cont[0] = cont[0] + 1
	elif(t == ta):
		cont[1] = cont[1] + 1
	elif(t < ta):
		cont[2] = cont[2] + 1
print(cont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:55:37) 
-- CODE:
from numpy import *

cont = zeros(3, dtype = int)

t = array(eval(input("gols efetuados: ")))
ta = array(eval(input("gols sofridos: ")))

for i in range(size(t)==size(ta)):
	if([t] > [ta]):
		cont[0] = cont[0] + 1
	elif([t] == [ta]):
		cont[1] = cont[1] + 1
	elif([t] < [ta]):
		cont[2] = cont[2] + 1
print(cont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:55:53) 
-- CODE:
from numpy import *

cont = zeros(3, dtype = int)

t = array(eval(input("gols efetuados: ")))
ta = array(eval(input("gols sofridos: ")))

for i in range(size(t)==size(ta)):
	if([t] > [ta]):
		cont[0] = cont[0] + 1
	elif([t] == [ta]):
		cont[1] = cont[1] + 1
	elif([t] < [ta]):
		cont[2] = cont[2] + 1
print(cont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:10:20) 
-- CODE:
from numpy import *

cont = zeros(3, dtype=int)

t = array(eval(input("gols efetuados: ")))
ta = array(eval(input("gols sofridos: ")))

for i in range(size(t)):
	if t[i] > ta[i]:
		cont[0] = cont[0] + 1
	elif t[i] == ta[i]:
		cont[1] = cont[1] + 1
	elif t[i] < ta[i]
		cont[2] = cont[2] + 1
print(cont)

-- ERROR:
File "XXXX", line 13
    elif t[i] < ta[i]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:10:26) 
-- CODE:
from numpy import *

cont = zeros(3, dtype=int)

t = array(eval(input("gols efetuados: ")))
ta = array(eval(input("gols sofridos: ")))

for i in range(size(t)):
	if t[i] > ta[i]:
		cont[0] = cont[0] + 1
	elif t[i] == ta[i]:
		cont[1] = cont[1] + 1
	elif t[i] < ta[i]:
		cont[2] = cont[2] + 1
print(cont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:10:57) 
-- CODE:
from numpy import *

cont = zeros(3, dtype=int)

t = array(eval(input("gols efetuados: ")))
ta = array(eval(input("gols sofridos: ")))

for i in range(size(t)):
	if t[i] > ta[i]:
		cont[0] = cont[0] + 1
	elif t[i] == ta[i]:
		cont[1] = cont[1] + 1
	elif t[i] < ta[i]:
		cont[2] = cont[2] + 1
print(cont)

-- EXECUTION TIME:
0.846382
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
